--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,9 @@
 {
-  "printWidth": 80,
-  "tabWidth": 4,
-  "useTabs": true,
-  "singleQuote": false,
-  "semi": true,
-  "trailingComma": "none",
-  "bracketSpacing": true
+	"printWidth": 80,
+	"tabWidth": 4,
+	"useTabs": false,
+	"singleQuote": false,
+	"semi": true,
+	"trailingComma": "none",
+	"bracketSpacing": true
 }
