--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages"
+        "lint": "eslint --ext .js,.ts,.jsx,.tsx --fix --quiet ./packages",
+        "build:dev": "rollup --config scripts/rollup/react.config.js"
     },
     "keywords": [],
     "author": "",
@@ -13,6 +14,7 @@
     "dependencies": {
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
+        "@rollup/plugin-commonjs": "^25.0.2",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "commitlint": "^17.6.5",
@@ -25,6 +27,7 @@
         "eslint-plugin-promise": "^6.1.1",
         "husky": "^8.0.3",
         "prettier": "^2.8.8",
-        "rollup": "^3.25.1"
+        "rollup": "^3.25.1",
+        "rollup-plugin-typescript2": "^0.35.0"
     }
 }
