--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
         "@rollup/plugin-commonjs": "^25.0.2",
+        "@rollup/plugin-replace": "^5.0.2",
         "@typescript-eslint/eslint-plugin": "^5.60.0",
         "@typescript-eslint/parser": "^5.60.0",
         "commitlint": "^17.6.5",
